# prompt-and-model-experimentation-framework

./: .coverage  .env.example  .gitignore  .vercelignore  Dockerfile.mlflow  README.md  STATUS.md  docker-compose.yml  init-mlflow-db.sh  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: main.py  schemas.py
app/ab_testing/: ab_testing.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: init_db.py  models.py  session.py
app/experiment/: dataset_loader.py  experiment_runner.py  llm_client.py
app/metrics/: hallucination.py  metrics.py
app/mlflow_integration/: mlflow_tracker.py
app/registry/: prompt_registry.py
app/reporting/: report_generator.py
app/static/: dashboard.html  index.html
datasets/experiments/: benchmark.json
docs/: TESTING.md
docs/architecture/: overview.md
experimentation_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: smoke_test.sh
tests/: conftest.py  test_ab_testing.py  test_api.py  test_hallucination.py  test_metrics.py  test_prompt_registry.py  test_reporting_logic.py
