[project]
name = "experimentation-framework"
version = "0.1.0"
description = "Project 3: Prompt and Model Experimentation Framework (boilerplate + first steps)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "tenacity>=8.3",
  "scipy>=1.11",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "plotly",
]
mlflow = [
  "mlflow>=2.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/init_db.py", "app/__pycache__/*", "app/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
